welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:20: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if (a>=13 && a<=19){
    ^countTeen:23: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    return false
    ^